# image_processing_with_opencv

./: CMakeLists.txt
Learning_OpenCV/: CMakeLists.txt  test_opencv.cpp
